--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "ejs": "^2.5.6",
     "express": "^4.14.1",
     "morgan": "^1.8.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
